Agregadas referencias sobre modulación experimental

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -506,7 +506,7 @@ presents a shift of where to expect the minimum number of excitations
 and also, most interestingly, a region where the predicted number of
 excitations is smaller than in the non-driven case.
 
-The temperature shift depends on $\epsilon$, as long as $\nu_0$ and $\omega$ fulfill \eqref{scattering}, altering them does not seem to alter the behavior of the final temperature. This indicates that the shift is related to the time dependent nature of the correction. One possible explanation for this shift is that $\nu_0$'s time dependence causes the cooling and heating sidebands to oscillate. If the detuning places the resonance point for the cavity's density of states closer to a particular sideband, that sideband's oscillations would, on average, spend more time near the resonance point than the other, enhancing the cooling or heating effect.  The common crossing point indicates the point where the resonance is placed at a symmetry point for the sideband's oscillations and thus the effects cancel out. This would also explain why there is better cooling to one side of this point and worse cooling to the other.   
+The temperature shift depends on $\epsilon$, as long as $\nu_0$ and $\omega$ fulfill \eqref{scattering}, altering them does not seem to alter the behavior of the final temperature. This indicates that the shift is related to the time dependent nature of the correction. One possible explanation for this shift is that $\nu_0$'s time dependence causes the cooling and heating sidebands to oscillate. If the detuning places the resonance point for the cavity's density of states closer to a particular sideband, that sideband's oscillations would, on average, spend more time near the resonance point than the other, enhancing the cooling or heating effect.  The common crossing point indicates the point where the resonance is placed at a symmetry point for the sideband's oscillations and thus the effects cancel out. This would also explain why there is better cooling to one side of this point and worse cooling to the other. The parameters used appear reasonable, as controlled frequency modulation has been shown\cite{WoolleyNM}\cite{JockelS}.
 
 
 
