Grafica ahora es .pdf, referencias añadidas

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -511,7 +511,7 @@ The temperature shift depends on $\epsilon$, as long as $\nu_0$ and $\omega$ ful
 
 
 \begin{figure}
-\includegraphics[scale=.4]{Temperature.png}  
+\includegraphics[scale=.4]{Temperature.pdf}  
 \caption{\textit{Comparison between the results for temperature with
     varying levels of perturbation.} The correction results in a
   shift of the location of the minimum temperature, as well as a lower
