Correccion dos typos

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -86,16 +86,16 @@ mechanical resonator's frequency as a function of time
 object's final temperature was studied in \cite{BarberisLC}. In that
 study it was found that the final temperature of the parametrically
 driven harmonic oscillator was larger than the nondriven case;
-\textbf{The rest of the paragraph is difficult to understand}
-The master equation from which the cooling rates were derived
-accounted for the natural frequeny the mechanical
-resonator via ad-hoc time-dependent coefficients, which were
-introduced after performing the Markov approximation. This approach
-could lead to an incomplete master equation and thus an incomplete
-description of the system's dynamics, as the system is being treated
-as essentially not time-dependent during the derivation of said master
-equation. In this study, we employ a different method that accounts
-for the time dependence throughout the entire derivation.
+\textbf{The rest of the paragraph is difficult to understand} The
+master equation from which the cooling rates were derived accounted
+for the natural frequency of the mechanical resonator via ad-hoc
+time-dependent coefficients, which were introduced after performing
+the Markov approximation. This approach could lead to an incomplete
+master equation and thus an incomplete description of the system's
+dynamics, as the system is being treated as essentially not
+time-dependent during the derivation of said master equation. In this
+study, we employ a different method that accounts for the time
+dependence throughout the entire derivation.
 
 The formalism which we apply (section \ref{OptmechH}) is based on
 Floquet theory and was demonstrated to be a more accurate treatment in
