Hechas correcciones de Marc a intro, nuevas graficas

--- a/Bib.bib
+++ b/Bib.bib
@@ -95,9 +95,8 @@ OPTannote = {•}
 
 
 @Article{BraginskiiOG,
-author = {V. B. BRAGINSKII{,} A. B. MANUKIN{,} and M. Yu. TIKHONOV },
-title = {INVESTIGATION OF DISSIPATIVE PONDEROMOTIVE EFFECTS OF
-ELECTROMAGNETIC RADIATION},
+author = {V. B. Braginskii{,} A. B. Manukin{,} and M. Yu. Tikhonov},
+title = {Investigation of dissipative poderomotive effects of electromagnetic radiation},
 journal = {Soviet Physics JETP},
 year = {1970},
 OPTkey = {•},
