Cambio de orden en las graficas

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -506,15 +506,19 @@ presents a shift of where to expect the minimum number of excitations
 and also, most interestingly, a region where the predicted number of
 excitations is smaller than in the non-driven case.
 
-The temperature shift depends on $\epsilon$. As long as $\nu_0$ and $\omega$ fulfill \eqref{scattering}, altering them does not seem to alter the behavior of the final temperature. This indicates that the shift is related to the time dependent nature of the correction. One possible explanation for this shift is that the $\epsilon$ term causes the cooling and heating sidebands to shift away from each other.  The common crossing point indicates the point where the resonance is placed at a symmetry point for the sideband's position and thus the effect cancels out. After the shift, the resonance point with each of the sidebands is further away from the optimal point for the other sideband. This effect can be observed in figure \ref{GraficaA-}. The parameters used appear reasonable, as controlled frequency modulation has been shown \cite{WoolleyNM}\cite{JockelS}.
-
-\begin{figure}
-\includegraphics[scale=.4]{GraficaA-.pdf}
-\caption{Cooling sideband for different perturbation levels. Besides all the scattering relations already stated, we
-  work under $\kappa \ll \nu_0$}
-\label{GraficaA-}
-\end{figure}
-
+The temperature shift depends on $\epsilon$. As long as $\nu_0$ and
+$\omega$ fulfill \eqref{scattering}, altering them does not seem to
+alter the behavior of the final temperature. This indicates that the
+shift is related to the time dependent nature of the correction. One
+possible explanation for this shift is that the $\epsilon$ term causes
+the cooling and heating sidebands to shift away from each other. The
+common crossing point indicates the point where the resonance is
+placed at a symmetry point for the sideband's position and thus the
+effect cancels out. After the shift, the resonance point with each of
+the sidebands is further away from the optimal point for the other
+sideband. This effect can be observed in figure \ref{GraficaA-}. The
+parameters used appear reasonable, as controlled frequency modulation
+has been shown \cite{WoolleyNM}\cite{JockelS}.
 
 \begin{figure}
 \includegraphics[scale=.4]{Temperature.pdf}  
@@ -525,6 +529,16 @@ The temperature shift depends on $\epsilon$. As long as $\nu_0$ and $\omega$ ful
   work under $\kappa \ll \nu_0$}
 \label{GraficaTemp}
 \end{figure}
+
+\begin{figure}
+\includegraphics[scale=.4]{GraficaA-.pdf}
+\caption{Cooling sideband for different perturbation levels. Besides all the scattering relations already stated, we
+  work under $\kappa \ll \nu_0$}
+\label{GraficaA-}
+\end{figure}
+
+
+
 
 
 \section{Conclusions}\label{ConCl}
