--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -462,76 +462,87 @@ following section.
 
 \section{Calculation of Mean Vibrational Occupation Number}\label{NumCal}
 
-In order to perform numerical computations we calculate
+To perform numerical computations we calculate
 \eqref{CavityQuadrature} up to first order in $\epsilon$. We assume
-that the cavity is at zero temperature ($n_p=0$). $\lambda_c$
-represents the eigenvalues for the cavity's states. The trace inside
-\eqref{CavityQuadrature} can be easily calculated, which leaves the
-integration
-
+that the cavity is at zero temperature ($n_p=0$).  The trace inside
+\eqref{CavityQuadrature} can be easily calculated, we obtain
 \begin{align}
 G(\nu,0)=&\int_0^\infty dt e^{(i\nu(t)+\lambda_c) t}Tr[...]\nonumber\\
-&= \int_0^\infty e^{i \nu = \nu_0 + \epsilon cos(2\omega t) t + \lambda t} Tr[...]dt, \nonumber\\
-&=\int_0^\infty e^{i \nu_0 t + \lambda t}e^{i \epsilon cos(2\omega t)t} Tr[...]dt, \nonumber\\
-&\approx \int_0^\infty e^{i \nu_0 t + \lambda t}(1+i \epsilon cos(2\omega t)t) Tr[...]dt, \nonumber\\
-&=\int_0^\infty e^{i \nu_0 t + \lambda t}Tr[...]dt\nonumber\\
-&+i\epsilon\int_0^\infty cos(2\omega t)t e^{i \nu_0 t + \lambda t}Tr[...]dt.\nonumber
+&= \int_0^\infty e^{i \nu = \nu_0 + \epsilon cos(2\omega t) t + \lambda_c t} Tr[...]dt, \nonumber\\
+&=\int_0^\infty e^{i \nu_0 t + \lambda_c t}e^{i \epsilon cos(2\omega t)t} Tr[...]dt, \nonumber\\
+&\approx \int_0^\infty e^{i \nu_0 t + \lambda_c t}(1+i \epsilon cos(2\omega t)t) Tr[...]dt, \nonumber\\
+&=\int_0^\infty e^{i \nu_0 t + \lambda_c t}Tr[...]dt\nonumber\\
+&+i\epsilon\int_0^\infty cos(2\omega t)t e^{i \nu_0 t + \lambda_c t}Tr[...]dt\, ,\nonumber
 \end{align}
-
+where $\lambda_c$ represents the eigenvalues for the cavity's states.
 This leads to an expression for \eqref{CavityQuadrature} which consist
-of two parts: one corresponding to the nondriven harmonic
-oscillator case plus a correction term proportional to $\epsilon$
+of two parts: one corresponding to the nondriven harmonic oscillator
+case plus a correction term proportional to $\epsilon$
 \begin{equation}
-\frac{G(\nu,0)}{g'^2}= \frac{1}{-k + 2i(\delta + \nu_0)} +i\epsilon\frac{(-k + i(\nu_0 + \delta))^2 - 4\omega^2}{((-k + i(\nu_0 + \delta))^2 + 4\omega^2)^2},
+\frac{G(\nu,0)}{g'^2}= \frac{1}{-k + 2i(\delta + \nu_0)} +i\epsilon\frac{(-k + i(\nu_0 + \delta))^2 - 4\omega^2}{((-k + i(\nu_0 + \delta))^2 + 4\omega^2)^2}\, .
 \end{equation} %where  $E_0 = g \sqrt{\frac{\hbar}{2m\nu_0}}$.
 
-We evaluate the real part of this expression numerically. In order for the
-adiabatic approximation to make sense, the variation in the mechanical
-oscillator's frequency must be slow when compared to the frequency
-itself ($\omega \ll \nu_0$) which translates to classical solutions
-with $1 \ll n$ due to \eqref{scattering}. Assuming that, originally
+We evaluate the real part of this expression numerically. In order for
+the adiabatic approximation to be valid, the variation in the
+mechanical oscillator's frequency must be slow when compared to the
+frequency itself ($\omega \ll \nu_0$) which translates to classical
+solutions with $1 \ll n$ due to \eqref{scattering}. Assuming that
 $\epsilon = \frac{\nu_0}{10}$ we now have the condition
 $\epsilon = \frac{n^2}{5}$. We wish for $n$ to be sufficiently large
 so as to fulfill the condition relating $\nu_0$ and $\omega$ but small
 enough so that $\epsilon \ll \nu_0$. To this end we chose
 $n=\sqrt{\frac{\nu_0}{2}}$ (rounded to the nearest integer) which
-maintains the previous ratio between the two frequencies. Physically, we employ a classical solution which describes a situation where the oscillator's average $\nu_0$ frequency is clearly the fastest one, while the secular frequency $\omega$ is of the order of the perturbation frequency $\epsilon$. As a
-calculation variable, we employ the ratio between the detuning
-$\delta$ and $\nu_0$ covering the range
-$\frac{\delta}{\nu_0} \in [-2,2]$
+maintains the previous ratio between the two frequencies. Physically,
+we employ a classical solution which describes a situation where the
+oscillator's average $\nu_0$ frequency is the fastest one, while the
+secular frequency $\omega$ is of the order of the perturbation
+frequency $\epsilon$. In figure \ref{GraficaTemp} it is shown the
+number of mechanical oscillations when $\frac{\delta}{\nu_0}$ is in
+the range of $[-2,2]$. Compared with the non-driven case, the
+parametrically driven oscillator has a frequency shift of where to
+expect the minimum number of excitations, and a region where the
+predicted number of excitations is smaller. The reason of this
+behavior is that, as $\epsilon$ increases, the parametric modulation
+causes the cooling and heating coefficients to shift away from each
+other, and its distribution becomes narrower and presents a higher
+peak. This can be observed in figure \ref{GraficaA-}. As long as
+$\nu_0$ and $\omega$ fulfill \eqref{scattering}, altering them does
+not change the final temperature. The parameters used are consistent
+with the reported controlled frequency modulation
+\cite{WoolleyNM}\cite{JockelS}. \fxnote{Pablo: Doble checa que esto
+  sea verdad}
 
-The results of this prediction for the number of mechanical
-excitations can be seen in figure \ref{GraficaTemp}. The prediction
-presents a shift of where to expect the minimum number of excitations
-and also, most interestingly, a region where the predicted number of
-excitations is smaller than in the non-driven case.
-
-The temperature shift depends on $\epsilon$. As long as $\nu_0$ and $\omega$ fulfill \eqref{scattering}, altering them does not seem to alter the behavior of the final temperature. This indicates that the shift is related to the time dependent nature of the correction. One possible explanation for this shift is that the $\epsilon$ term causes the cooling and heating coefficients to shift away from each other.  After the shift, the resonance point with each of the coefficients is further away from the optimal point for the other coefficient. The distribution for both coefficients becomes narrower and presents a higher peak. This effect can be observed in figure \ref{GraficaA-}. The parameters used appear reasonable, as controlled frequency modulation has been shown \cite{WoolleyNM}\cite{JockelS}.
-
-\begin{figure}
-\includegraphics[scale=.4]{GraficaA-.pdf}
-\caption{Cooling coefficient $A_-$ for different perturbation levels. As $\epsilon$ increases the $A_-$ presents a narrower distribution and a higher peak. The peak shifts away from the cavity resonance corresponding to $\nu_0$. $A_+$ is not shown as, in this region, it is around 4 orders of magnitude smaller than $A_-$.  Besides all the scattering relations already stated, we
-  work under $\kappa \ll \nu_0$}
-\label{GraficaA-}
-\end{figure}
 
 
 \begin{figure}
 \includegraphics[scale=.4]{Temperature.pdf}  
-\caption{\textit{Comparison between the results for temperature with
-    varying levels of perturbation.} The correction results in a
-  shift of the location of the minimum temperature, as well as a lower
-  minimum. All temperature curves cross the same point. Besides all the scattering relations already stated, we
-  work under $\kappa \ll \nu_0$}
+\caption{ Mechanical oscillator phonon number as a function of the
+  perturbation. The correction results in a shift of the location of
+  the minimum temperature, as well as a lower minimum. All curves
+  cross the same point. We used the parameters in the text plus
+  $\kappa \ll \nu_0$}
 \label{GraficaTemp}
 \end{figure}
 
 \begin{figure}
 \includegraphics[scale=.4]{GraficaA-.pdf}
-\caption{Cooling sideband for different perturbation levels. Besides all the scattering relations already stated, we
-  work under $\kappa \ll \nu_0$}
+\caption{Cooling coefficient $A_-$ as a function of the perturbation.
+  As $\epsilon$ increases the $A_-$ presents a narrower distribution
+  and a higher peak. The peak shifts away from the cavity resonance
+  corresponding to $\nu_0$. $A_+$ is not shown as, in this region, it
+  is around 4 orders of magnitude smaller than $A_-$. We used the
+  parameters in the text plus $\kappa \ll \nu_0$.}
 \label{GraficaA-}
 \end{figure}
+
+
+
+% \begin{figure}
+% \includegraphics[scale=.4]{GraficaA-.pdf}
+% \caption{Cooling sideband for different perturbation levels. Besides all the scattering relations already stated, we
+%   work under $\kappa \ll \nu_0$}
+% \label{GraficaA-}
+% \end{figure}
 
 
 
