--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -475,7 +475,7 @@ G(\nu,0)=&\int_0^\infty dt e^{(i\nu(t)) t}Tr[...]\nonumber\\
 \end{align}The $Tr[...]$ can be evaluated in a straightforward manner and results in
 
 \begin{equation}
-Tr_a[X_a e^{L_a t} X_a \rho_{st}] = \frac{1}{2}e^{-\kappa t},
+Tr_a[X_a e^{L_a t} X_a \rho_{st}] = \frac{1}{2}e^{-(\frac{\kappa}{2}-i\delta) t},
 \end{equation} the $e^{-\kappa t}$ factor acts as a cut-off for the integral, which allows for the expansion to be performed. See Appendix \ref{App1} for more on the eigenvalues of the trace states.
 This leads to an expression for \eqref{CavityQuadrature} which consist
 of two parts: one corresponding to the nondriven harmonic oscillator
