--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -248,10 +248,16 @@ L_a \rho =& - \frac{\kappa}{2}(n_p + 1)[a^\dagger a\rho + \rho a^\dagger a -2a\r
 $\kappa$ is the energy decay rate for the cavity and $\gamma$ is the
 decay rate for the mechanical oscillator. The number of thermal
 excitations for the cavity and the oscillator are given by $n_p$ and
-$n_m$ respectively \cite{EnglertFL}. The superoperators $L_\Gamma$ and $L_a$ model the energy
-exchanges between the environment and the cavity and the mechanical
-resonator respectively. The formalism developed in \cite{HanngiFM} was
-used to derive the mechanical dissipation term \eqref{eq:mechanical_dissipation}.
+$n_m$ respectively \cite{EnglertFL}. The superoperators $L_\Gamma$ and
+$L_a$ model the energy exchanges between the environment and the
+cavity and the mechanical resonator respectively. The formalism
+developed in \cite{HanngiFM} was used to derive the mechanical
+dissipation term \eqref{eq:mechanical_dissipation}.
+
+Equation \eqref{LCMasterEquation} represents a master equation for a
+parametric optomechanical system with an improved dissipation model
+which accounts for the mechanical oscillator's time dependent
+frequency.
 
 
 
@@ -325,48 +331,15 @@ from now on as all calculations will be done in the displaced frame.
 
 \section{Solution for Small Oscillations}\label{SolSmallOsc}
  
- In order to obtain an explicit solution for \eqref{TimeDependentHO} we focus on the case of small oscillations around a central frequency, specifically
+In order to obtain an explicit form of the Floquet operators, we focus
+on the case of small oscillations around a central frequency,
+specifically\fxnote{Pablo: cambie notacion, checalo.}
 
 \begin{equation}\label{SmallOscillationsTDHO}
 \nu(t) = \nu_0 + \epsilon' cos(2\omega t),
-\end{equation} with $\epsilon \ll \nu_0$ where $\nu_0$ is the mean frequency. This leads to the time-dependent harmonic oscillator equation
-
-\begin{equation}
-\ddot{x} + (\nu_0^2 + 2\epsilon' \nu_0 cos(2\omega t))x = 0,
 \end{equation}
-which is a particular case of the Mathieu equation \cite{PiatekME}. In
-order to put the equation into the standard form we employ the change
-of variables $t'= \omega t$ and set
-$\epsilon = \frac{2\epsilon' \nu_0}{\omega^2}$ and use the scattering
-relation
-\begin{equation}
-\frac{\nu_0^2}{\omega^2} = n^2,\label{scattering}
-\end{equation}
-with $n \in \mathbb{Z}^+$ in order to guarantee stable solutions
-\cite{WardFT}. Under these restrictions and returning to the original
-variable $t$, the solutions for \eqref{SmallOscillationsTDHO} are, to
-first order in $\epsilon$ and for the case of $n=1$
+with $\epsilon' \ll \nu_0$ where $\nu_0$ is the mean frequency.
 
-\begin{equation}\label{SmallOscillationsSolution}
-f(t)=  e^{i\omega t} + \frac{\epsilon}{16} e^{3i\omega t},
-\end{equation} and its complex conjugate, which is equal to $f(-t)$. 
-
-\subsection{Explicit Expressions for Small Oscillations}
-
-	With an explicit solution for \eqref{SmallOscillationsTDHO} in hand, we obtain explicit solutions for the Floquet operator commutator terms by direct substitution of \eqref{SmallOscillationsSolution} into \eqref{FloquetOperators} \cite{TesisMaestria}
-
-\begin{align}
-C(t)_{+-} =& i [1 -\frac{\epsilon}{16}e^{2i\omega t}-\frac{6\epsilon}{16}e^{-2i\omega t}],\\
-C(t)_{-+} =& i [1 -\frac{\epsilon}{16}e^{-2i\omega t}-\frac{6\epsilon}{16}e^{2i\omega t}].
-\end{align} The $\gamma_{\pm}$ coefficients can be calculated as well
-
-\begin{equation}
-\gamma_\pm= \frac{1}{\omega}e^{\mp i\omega t},
-\end{equation} as can be the overall time-dependent factor for the time-dependent harmonic oscillator expressed in terms of Floquet operators,
-
-\begin{equation}
-\frac{W}{|f|^2} = \omega.
-\end{equation} 
 
 With these expressions we may solve for the $\alpha(t)$ and $\beta(t)$ coefficients. The equations are
 
@@ -418,7 +391,6 @@ equation with Floquet operators for the mechanical oscillator
 \dot{\rho} = \frac{1}{i\hbar}[H,\rho] +L_a\rho + L_\Gamma \rho,
 \end{equation} where $L_a$ corresponds to the cavity's light field \cite{ZollerQN} and $L_\Gamma$ corresponds to the time dependent harmonic oscillator \cite{HanngiFM}.
 
-Equation \eqref{LCMasterEq} represents a master equation for a parametric optomechanical system with an improved dissipation model which accounts for the mechanical oscillator's time dependent frequency.
 
 \section{Laser Cooling}\label{LasCool}
 
@@ -458,7 +430,9 @@ average number of phonon excitations) can be obtained in a
 straightforward manner. This procedure is done numerically in the
 following section.
 
-
+\fxnote{Una de las cosas mas bonitas es que desaparece la referencia a
+  la solucion de las ecuaciones de Mathieu en la aproximacion
+  adiabatica. Pon un parrafo explicando donde, porque  y cuando pasa esto.}
 \section{Calculation of Mean Vibrational Occupation Number}\label{NumCal}
 
 To perform numerical computations we calculate
@@ -565,6 +539,111 @@ natural frequency of the cavity field changes periodically with time.
 We plan to explore this case in future work.
  
 \appendix
+
+
+\section{Master Equation for Small Oscillations}\label{App2}
+
+In order to obtain an explicit solution for \eqref{TimeDependentHO} we
+focus on the case of small oscillations around a central frequency,
+specifically\fxnote{Pablo: cambie notacion, checalo.}
+
+\begin{equation}\label{SmallOscillationsTDHO}
+\nu(t) = \nu_0 + \epsilon' cos(2\omega t),
+\end{equation}
+with $\epsilon' \ll \nu_0$ where $\nu_0$ is the mean frequency. This
+leads to the time-dependent harmonic oscillator equation
+
+\begin{equation}\label{SmallOscillations_equation}
+\ddot{f} + (\nu_0^2 + 2\epsilon' \nu_0 cos(2\omega t))f = 0,
+\end{equation}
+which is a particular case of the Mathieu equation \cite{PiatekME}. In
+order to put the equation into the standard form we employ the change
+of variables $t'= \omega t$ and set
+$\epsilon = \frac{2\epsilon' \nu_0}{\omega^2}$ and use the scattering
+relation
+\begin{equation}
+\frac{\nu_0^2}{\omega^2} = n^2,\label{scattering}
+\end{equation}
+with $n \in \mathbb{Z}^+$ in order to guarantee stable solutions
+\cite{WardFT}. Under these restrictions and returning to the original
+variable $t$, the solutions for \eqref{SmallOscillations_equation}
+are, to first order in $\epsilon$ and for the case of $n=1$
+
+\begin{equation}\label{SmallOscillationsSolution}
+f(t)=  e^{i\omega t} + \frac{\epsilon}{16} e^{3i\omega t},
+\end{equation} and its complex conjugate, which is equal to $f(-t)$. 
+
+
+
+With an explicit solution for \eqref{SmallOscillations_equation} in
+hand, we obtain explicit solutions for the Floquet operator commutator
+terms by direct substitution of \eqref{SmallOscillationsSolution} into
+\eqref{FloquetOperators} \cite{TesisMaestria}
+
+\begin{align}
+C(t)_{+-} =& i [1 -\frac{\epsilon}{16}e^{2i\omega t}-\frac{6\epsilon}{16}e^{-2i\omega t}],\\
+C(t)_{-+} =& i [1 -\frac{\epsilon}{16}e^{-2i\omega t}-\frac{6\epsilon}{16}e^{2i\omega t}].
+\end{align} The $\gamma_{\pm}$ coefficients can be calculated as well
+
+\begin{equation}
+\gamma_\pm= \frac{1}{\omega}e^{\mp i\omega t},
+\end{equation} as can be the overall time-dependent factor for the time-dependent harmonic oscillator expressed in terms of Floquet operators,
+
+\begin{equation}
+\frac{W}{|f|^2} = \omega.
+\end{equation} 
+
+With these expressions we may solve for the $\alpha(t)$ and $\beta(t)$ coefficients. The equations are
+
+\begin{align}
+\dot{\alpha} =& \alpha(-\frac{\kappa}{2}+i(\delta+g\sqrt{\frac{\hbar}{2M}}(e^{i\omega t} \beta^* + e^{-i\omega t} \beta))-i\frac{\Omega}{2},\\
+\dot{\beta} =& \beta(-\frac{\gamma}{2}-i 2\omega)+ig\sqrt{\frac{\hbar}{2M}}|\alpha|^2e^{i\omega t},
+\end{align}
+however our focus is on the stationary case
+($\dot{\alpha}(t)=\dot{\beta}(t)=0$) and in a weak coupling regime, so
+coefficients of first order in $g$ or higher are neglected, which
+results in two simplified equations
+
+\begin{align}
+0 =& \alpha(-\frac{\kappa}{2}+i\delta)-i\frac{\Omega}{2},\\
+0 =& \beta(-\frac{\gamma}{2}-i 2\omega),
+\end{align} which are trivially solved 
+
+\begin{align}
+\alpha_0 =& \frac{\Omega}{2\delta-i\kappa},\\
+\beta_0 =& 0.
+\end{align} The 0 sub-index denotes that the solutions are valid only to zeroth order in the coupling parameter. 
+
+\subsection{Laser Cooling Hamiltonian}
+
+Under these parameters we can neglect the $C(t)$ terms as they
+figure into the
+master equation as terms of first order in $\epsilon$ and second order
+in $\beta$. The term involving the time derivatives of the Floquet
+operators can also be neglected for this reason. The Hamiltonian can
+then be written as
+
+\begin{align}
+H =& -\hbar \delta a^{\dagger}a +\hbar\omega\Gamma^{\dagger}\Gamma \\
+&-\hbar g\sqrt{\frac{\hbar}{2M}}(a^{\dagger}a +\alpha_0 a^{\dagger}+\alpha^*_0 a)(\gamma_-(t)\Gamma^{\dagger}+\gamma_+(t)\Gamma)\nonumber.
+\end{align} We focus on the case where $|\alpha_0| \gg 1$
+\cite{BarberisLC}, so that the $a^\dagger a$ term can be neglected as
+it is small when compared to the other two terms in the interaction.
+This leads to a further simplified Hamiltonian
+
+\begin{align} \label{LCHamiltonian}
+H(t) =& -\hbar \delta a^{\dagger}a +\hbar\omega\Gamma^{\dagger}\Gamma \\
+&+\frac{\hbar g\sqrt{\frac{\hbar}{2M}}}{\omega}(\alpha_0 a^{\dagger}+\alpha^*_0 a)(e^{i\omega t} \nonumber\Gamma^{\dagger}+e^{-i\omega t}\Gamma).
+\end{align}
+This Hamiltonian corresponds to a standard optomechanical master
+equation with Floquet operators for the mechanical oscillator
+
+
+\begin{equation}\label{LCMasterEq}
+\dot{\rho} = \frac{1}{i\hbar}[H,\rho] +L_a\rho + L_\Gamma \rho,
+\end{equation} where $L_a$ corresponds to the cavity's light field \cite{ZollerQN} and $L_\Gamma$ corresponds to the time dependent harmonic oscillator \cite{HanngiFM}.
+
+
 
 \section{The Damping Basis}\label{App1}
 
