"Gráficas actualizadas con nuevos parámetros"

--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -511,7 +511,7 @@ with the reported controlled frequency modulation
 
 
 \begin{figure}
-\includegraphics[scale=.4]{Temperature.pdf}  
+\includegraphics[scale=.4]{GraficaTemp.pdf}  
 \caption{ Mechanical oscillator phonon number as a function of the
   perturbation. The correction results in a shift of the location of
   the minimum temperature, as well as a lower minimum. All curves
